--- a/RequestManagementSystem/Views/Home/Index.cshtml
+++ b/RequestManagementSystem/Views/Home/Index.cshtml
@@ -36,7 +36,7 @@
                         <div class="icon">
                             <i class="fas fa-check-circle"></i>
                         </div>
-                        <a href="/Request/Pending" class="small-box-footer">Onaylamaya Git <i class="fas fa-arrow-circle-right"></i></a>
+                        <a href="/Request/AdminRequestList" class="small-box-footer">Onaylamaya Git <i class="fas fa-arrow-circle-right"></i></a>
                     </div>
                 </div>
 
